src/snapshots/alma__infer__tests__infer-10.snap
---
source: src/infer.rs
expression: "infer(r#\"\nmodule Parent\n\nimport Nope exposing (test)\n\ntest = 1\n\"#)"

---
Input:


module Parent

import Nope exposing (test)

test = 1


---
Output:

[4:0]

Couldn't find module `Nope`

  2│  module Parent
  3│  
  4│  import Nope exposing (test)
   │  ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑
  5│  
  6│  test = 1
