src/snapshots/alma__infer__tests__infer-11.snap
---
source: src/infer.rs
expression: "infer(\"\\\nmodule Test exposing (main, add)\n\nadd x y = x + y\n\nmain = add 5\n\")"

---
Input:

module Test exposing (main, add)

add x y = x + y

main = add 5


---
Output:

Test

add : Float -> Float -> Float

main : Float -> Float



