src/snapshots/alma__infer__tests__infer-12.snap
---
source: src/infer.rs
expression: "infer(\"module Test exposing (last)\n\nlast _ y = y\n\")"

---
Input:

module Test exposing (last)

last _ y = y


---
Output:

module Test

last : ∀ a b . a -> b -> b



