src/snapshots/alma__infer__tests__infer-13.snap
---
source: src/infer.rs
expression: "infer(\"\\\nmodule User exposing (id, new)\n\nimport User.Id\n\nid = User.Id\n\nnew = { id = User.Id.new }\n\nmodule User.Id exposing (new)\n    new = 42\n\")"

---
Input:

module User exposing (id, new)

import User.Id

id = User.Id

new = { id = User.Id.new }

module User.Id exposing (new)
    new = 42


---
Output:

[5:5]

Undefined module `User`. Did you forget to import it?

  3│  import User.Id
  4│  
  5│  id = User.Id
   │       ↑↑↑↑↑↑↑
  6│  
  7│  new = { id = User.Id.new }
