src/snapshots/alma__infer__tests__infer-19.snap
---
source: src/infer.rs
expression: "infer(\"\\\nmodule User exposing (new)\n\nimport User.Id\n\nnew = User.Id\n\nmodule User.Id exposing (new)\n    new = 42\n\")"

---
Input:

module User exposing (new)

import User.Id

new = User.Id

module User.Id exposing (new)
    new = 42


---
Output:

[5:6]

Undefined identifier `User.Id`

  3│  import User.Id
  4│  
  5│  new = User.Id
   │        ↑↑↑↑↑↑↑
  6│  
  7│  module User.Id exposing (new)
