src/snapshots/alma__infer__tests__infer-20.snap
---
source: src/infer.rs
expression: "infer(\"\\\nmodule Test exposing (Fruit)\n\ntype Fruit = Banana\n\")"

---
Input:

module Test exposing (Fruit)

type Fruit = Banana


---
Output:

module Test


